feat(membership-fees): add endpoint to retrieve membership fees by collectivity