@@ -1,6 +1,5 @@
 package school.hei.federationagricole.validator;
 
-
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Component;
 import school.hei.federationagricole.entity.Member;
@@ -16,22 +15,24 @@ import java.util.List;
 @Component
 @AllArgsConstructor
 public class CollectivityValidator {
+
     private final MemberRepository memberRepository;
 
-    public void validateCollectivityCreation(CreateCollectivity createCollectivity) throws BadRequestException {
+    public void validateCollectivityCreation(CreateCollectivity req) {
 
-        if(!createCollectivity.isFederationApproval()){
-            throw new BadRequestException("Collectivity must have federation approval");
+        if (!req.isFederationApproval()) {
+            throw new BadRequestException("Collectivity must have federation approval.");
+        }
+        if (req.getLocation() == null || req.getLocation().isBlank()) {
+            throw new BadRequestException("Collectivity must have a location.");
+        }
+        if (req.getStructure() == null) {
+            throw new BadRequestException("Collectivity structure is required.");
         }
 
-        if(createCollectivity.getLocation() == null){
-            throw new BadRequestException("Collectivity must have location");
-        }
-
-
-        List<Integer> memberIds = createCollectivity.getMemberIds();
+        List<Integer> memberIds = req.getMemberIds();
         if (memberIds == null || memberIds.isEmpty()) {
-            throw new BadRequestException("Collectivity must have members");
+            throw new BadRequestException("Collectivity must have at least 10 members.");
         }
 
         validateAllMembersExist(memberIds);
@@ -40,96 +41,64 @@ public class CollectivityValidator {
 
         if (members.size() < 10) {
             throw new BadRequestException(
-                    String.format("Collectivity must have at least 10 members (currently has %d)", members.size())
-            );
+                    "Collectivity must have at least 10 members (currently %d).".formatted(members.size()));
         }
 
-        long membersWithSeniority = members.stream()
-                .filter(Member::isAValidSponsor)
-                .count();
-
-        if (membersWithSeniority < 5) {
+        long withSeniority = members.stream().filter(Member::isAValidSponsor).count();
+        if (withSeniority < 5) {
             throw new BadRequestException(
-                    String.format("Collectivity must have at least 5 members with 6+ months seniority (currently has %d)",
-                            membersWithSeniority)
-            );
+                    "Collectivity needs at least 5 members with 6+ months seniority (currently %d)."
+                            .formatted(withSeniority));
         }
 
-        validateStructure(createCollectivity.getStructure(), memberIds);
+        validateStructure(req.getStructure(), memberIds);
     }
-
 
     private void validateAllMembersExist(List<Integer> memberIds) {
-        List<Integer> missingIds = new ArrayList<>();
-
+        List<Integer> missing = new ArrayList<>();
         for (Integer id : memberIds) {
-            if (!memberRepository.existsById(id)) {
-                missingIds.add(id);
-            }
+            if (!memberRepository.existsById(id)) missing.add(id);
         }
-
-        if (!missingIds.isEmpty()) {
-            throw new NotFoundException("Members not found with IDs: " + missingIds);
+        if (!missing.isEmpty()) {
+            throw new NotFoundException("Members not found with IDs: " + missing);
         }
     }
 
+    private void validateStructure(CreateStructure structure, List<Integer> memberIds) {
+        if (structure.getPresidentId()      == null) throw new BadRequestException("President ID is required.");
+        if (structure.getVicePresidentId()  == null) throw new BadRequestException("Vice President ID is required.");
+        if (structure.getTreasurerId()      == null) throw new BadRequestException("Treasurer ID is required.");
+        if (structure.getSecretaryId()      == null) throw new BadRequestException("Secretary ID is required.");
 
+        // BUG FIX: condition was inverted — should throw when member does NOT exist
+        checkExists(structure.getPresidentId(),     "President");
+        checkExists(structure.getVicePresidentId(), "Vice President");
+        checkExists(structure.getTreasurerId(),     "Treasurer");
+        checkExists(structure.getSecretaryId(),     "Secretary");
 
-    private void validateStructure(CreateStructure structure, List<Integer> memberIds) throws BadRequestException {
-        if (structure == null) {
-            throw new BadRequestException("Collectivity structure is required");
+        checkInList(structure.getPresidentId(),     memberIds, "President");
+        checkInList(structure.getVicePresidentId(), memberIds, "Vice President");
+        checkInList(structure.getTreasurerId(),     memberIds, "Treasurer");
+        checkInList(structure.getSecretaryId(),     memberIds, "Secretary");
+
+        List<Integer> roleIds = List.of(
+                structure.getPresidentId(), structure.getVicePresidentId(),
+                structure.getTreasurerId(), structure.getSecretaryId());
+        if (roleIds.stream().distinct().count() != 4) {
+            throw new BadRequestException("Each specific post must be held by a different member.");
         }
-
-        if (structure.getPresidentId() == null) {
-            throw new BadRequestException("President ID is required");
-        }
-        if (structure.getVicePresidentId() == null) {
-            throw new BadRequestException("Vice President ID is required");
-        }
-        if (structure.getTreasurerId() == null) {
-            throw new BadRequestException("Treasurer ID is required");
-        }
-        if (structure.getSecretaryId() == null) {
-            throw new BadRequestException("Secretary ID is required");
-        }
-
-        validateStructureMemberExists(structure.getPresidentId(), "President");
-        validateStructureMemberExists(structure.getVicePresidentId(), "Vice President");
-        validateStructureMemberExists(structure.getTreasurerId(), "Treasurer");
-        validateStructureMemberExists(structure.getSecretaryId(), "Secretary");
-
-        validateStructureMemberInList(structure.getPresidentId(), memberIds, "President");
-        validateStructureMemberInList(structure.getVicePresidentId(), memberIds, "Vice President");
-        validateStructureMemberInList(structure.getTreasurerId(), memberIds, "Treasurer");
-        validateStructureMemberInList(structure.getSecretaryId(), memberIds, "Secretary");
-
-        validateNoDuplicateRoles(structure);
     }
 
-    private void validateStructureMemberExists(Integer memberId, String role) {
+    /** BUG FIX: throw NotFoundException when member does NOT exist (was inverted before). */
+    private void checkExists(Integer memberId, String role) {
         if (!memberRepository.existsById(memberId)) {
             throw new NotFoundException(role + " not found with ID: " + memberId);
         }
     }
 
-    private void validateStructureMemberInList(Integer memberId, List<Integer> memberIds, String role) throws BadRequestException {
+    private void checkInList(Integer memberId, List<Integer> memberIds, String role) {
         if (!memberIds.contains(memberId)) {
-            throw new BadRequestException(role + " must be one of the collectivity members");
+            throw new BadRequestException(role + " must be included in the collectivity member list.");
         }
     }
-
-    private void validateNoDuplicateRoles(CreateStructure structure) throws BadRequestException {
-        List<Integer> roleIds = List.of(
-                structure.getPresidentId(),
-                structure.getVicePresidentId(),
-                structure.getTreasurerId(),
-                structure.getSecretaryId()
-        );
-
-        long distinctCount = roleIds.stream().distinct().count();
-        if (distinctCount != 4) {
-            throw new BadRequestException("The same member cannot hold multiple specific posts (President, Vice President, Treasurer, Secretary)");
-        }
-    }
-
 }
